# cats

./: api-reference.html  cli-reference.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  searchindex.js  setup.py
.github/workflows/: docs-build-deploy.yml
cats/: carbonFootprint.py  check_clean_arguments.py  configure.py  forecast.py
docs/source/: api-reference.rst
